--- a/src/main/resources/de/greluc/sc/sckm/fxml/SettingsView.fxml
+++ b/src/main/resources/de/greluc/sc/sckm/fxml/SettingsView.fxml
@@ -69,7 +69,7 @@
       <graphic>
          <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@../icons/outline/xbox-x.png" />
+               <Image url="@../icons/outline/xbox-x_white.png" />
             </image>
          </ImageView>
       </graphic>
@@ -81,7 +81,7 @@
       <graphic>
          <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@../icons/outline/xbox-x.png" />
+               <Image url="@../icons/outline/xbox-x_white.png" />
             </image>
          </ImageView>
       </graphic>
@@ -93,7 +93,7 @@
       <graphic>
          <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@../icons/outline/xbox-x.png" />
+               <Image url="@../icons/outline/xbox-x_white.png" />
             </image>
          </ImageView>
       </graphic>
@@ -105,7 +105,7 @@
       <graphic>
          <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@../icons/outline/xbox-x.png" />
+               <Image url="@../icons/outline/xbox-x_white.png" />
             </image>
          </ImageView>
       </graphic>
@@ -117,7 +117,7 @@
       <graphic>
          <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@../icons/outline/xbox-x.png" />
+               <Image url="@../icons/outline/xbox-x_white.png" />
             </image>
          </ImageView>
       </graphic>
@@ -129,7 +129,7 @@
       <graphic>
          <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@../icons/outline/xbox-x.png" />
+               <Image url="@../icons/outline/xbox-x_white.png" />
             </image>
          </ImageView>
       </graphic>
