--- a/src/main/resources/de/greluc/sc/sckm/fxml/StartView.fxml
+++ b/src/main/resources/de/greluc/sc/sckm/fxml/StartView.fxml
@@ -1,16 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   ~ SC Kill Monitor                                                                               ~
   ~ Copyright (C) 2025-2025 SC Kill Monitor Team                                                  ~
@@ -31,60 +20,77 @@
   ~ along with SC Kill Monitor. If not, see https://www.gnu.org/licenses/                         ~
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.greluc.sc.sckm.controller.StartViewController">
-     <columnConstraints>
-      <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
-         <ColumnConstraints hgrow="NEVER" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
-         <ColumnConstraints hgrow="NEVER" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
-      <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
-     </columnConstraints>
-     <rowConstraints>
-      <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
-         <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
-         <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="NEVER" />
-      <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
-     </rowConstraints>
-     <Label text="Welcome to SC Kill Monitor!" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-     <Button onAction="#onStartButtonClicked" style="-fx-background-color: #00766b;" GridPane.columnIndex="1" GridPane.rowIndex="8">
-      <graphic>
-          <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-              <Image url="@../icons/player-play_white.png"/>
-          </ImageView>
-      </graphic></Button>
-   <Label text="Select Channel:" GridPane.columnIndex="1" GridPane.rowIndex="3">
-      <GridPane.margin>
-         <Insets right="10.0" />
-      </GridPane.margin>
-   </Label>
-   <ComboBox fx:id="channelSelection" onAction="#onChannelSelection" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-   <Label text="Selected Path:" GridPane.columnIndex="1" GridPane.rowIndex="4">
-      <GridPane.margin>
-         <Insets right="10.0" />
-      </GridPane.margin>
-   </Label>
-   <Label fx:id="selectedPathValue" wrapText="true" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-   <Label text="Set Handle:" GridPane.columnIndex="1" GridPane.rowIndex="5">
-      <GridPane.margin>
-         <Insets right="10.0" />
-      </GridPane.margin>
-   </Label>
-   <TextField fx:id="inputHandle" promptText="SC Player Handle (required)" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-   <Label text="Set Scan Intervall (s):" GridPane.columnIndex="1" GridPane.rowIndex="6">
-      <GridPane.margin>
-         <Insets right="10.0" />
-      </GridPane.margin>
-   </Label>
-   <TextField fx:id="inputInterval" promptText="Time in Seconds (required)" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-   <Label text="Disclaimer: The SC Kill Monitor app may only be used to report potential griefings or stream snipings. Use of the identified player names for purposes that violate the Star Citizen Terms and Conditions is prohibited. The responsibility for compliant use lies with the user. This application is fan made and is not officially affiliated with Cloud Imperium Games." wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.valignment="TOP">
-      <GridPane.margin>
-         <Insets top="10.0" />
-      </GridPane.margin>
-   </Label>
- </GridPane>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+          xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="de.greluc.sc.sckm.controller.StartViewController">
+    <columnConstraints>
+        <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" maxWidth="150.0" minWidth="150.0" prefWidth="150.0"/>
+        <ColumnConstraints hgrow="NEVER" maxWidth="150.0" minWidth="150.0" prefWidth="150.0"/>
+        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0"
+                           prefWidth="100.0"/>
+        <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER"/>
+        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="NEVER"/>
+        <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="NEVER"/>
+        <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER"/>
+    </rowConstraints>
+    <Label text="Welcome to SC Kill Monitor!" GridPane.columnIndex="1"
+           GridPane.columnSpan="2147483647" GridPane.rowIndex="1"/>
+    <Button onAction="#onStartButtonClicked" style="-fx-background-color: #00766b;"
+            GridPane.columnIndex="1" GridPane.rowIndex="8">
+        <graphic>
+            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@../icons/player-play_white.png"/>
+            </ImageView>
+        </graphic>
+    </Button>
+    <Label text="Select Channel:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <GridPane.margin>
+            <Insets right="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <ComboBox fx:id="channelSelection" onAction="#onChannelSelection" GridPane.columnIndex="2"
+              GridPane.rowIndex="3"/>
+    <Label text="Selected Path:" GridPane.columnIndex="1" GridPane.rowIndex="4">
+        <GridPane.margin>
+            <Insets right="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label fx:id="selectedPathValue" wrapText="true" GridPane.columnIndex="2"
+           GridPane.columnSpan="2" GridPane.rowIndex="4"/>
+    <Label text="Set Handle:" GridPane.columnIndex="1" GridPane.rowIndex="5">
+        <GridPane.margin>
+            <Insets right="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <TextField fx:id="inputHandle" promptText="SC Player Handle (required)" GridPane.columnIndex="2"
+               GridPane.rowIndex="5"/>
+    <Label text="Set Scan Intervall (s):" GridPane.columnIndex="1" GridPane.rowIndex="6">
+        <GridPane.margin>
+            <Insets right="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <TextField fx:id="inputInterval" promptText="Time in Seconds (required)"
+               GridPane.columnIndex="2" GridPane.rowIndex="6"/>
+    <Label text="Disclaimer: The SC Kill Monitor app may only be used to report potential griefings or stream snipings. Use of the identified player names for purposes that violate the Star Citizen Terms and Conditions is prohibited. The responsibility for compliant use lies with the user. This application is fan made and is not officially affiliated with Cloud Imperium Games."
+           wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2"
+           GridPane.valignment="TOP">
+        <GridPane.margin>
+            <Insets top="10.0"/>
+        </GridPane.margin>
+    </Label>
+</GridPane>
