--- a/src/main/resources/de/greluc/sc/sckm/fxml/SettingsView.fxml
+++ b/src/main/resources/de/greluc/sc/sckm/fxml/SettingsView.fxml
@@ -21,115 +21,109 @@
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-          prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1"
-          xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="de.greluc.sc.sckm.controller.SettingsViewController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.greluc.sc.sckm.controller.SettingsViewController">
     <columnConstraints>
-        <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="155.0"/>
-        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="55.0" minWidth="55.0" prefWidth="55.0"/>
-        <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="155.0" />
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="ALWAYS" maxWidth="55.0" minWidth="55.0" prefWidth="55.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER"/>
+        <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
     </rowConstraints>
-    <Button mnemonicParsing="false" onAction="#onSave" text="Save" GridPane.columnIndex="1"
-            GridPane.rowIndex="7"/>
-    <Label text="Path to LIVE:" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-    <TextField fx:id="inputPathPtu" onMouseClicked="#onPtuClicked" GridPane.columnIndex="2"
-               GridPane.rowIndex="2"/>
-    <Label text="Path to PTU:" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-    <Label text="Path to EPTU:" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-    <Label text="Path to HOTFIX:" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-    <Label text="Path to TECH-PREVIEW:" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
-    <TextField fx:id="inputPathLive" onMouseClicked="#onLiveClicked" GridPane.columnIndex="2"
-               GridPane.rowIndex="1"/>
-    <TextField fx:id="inputPathEptu" onMouseClicked="#onEptuClicked" GridPane.columnIndex="2"
-               GridPane.rowIndex="3"/>
-    <TextField fx:id="inputPathHotfix" onMouseClicked="#onHotfixClicked" GridPane.columnIndex="2"
-               GridPane.rowIndex="4"/>
-    <TextField fx:id="inputPathTechPreview" onMouseClicked="#onTechPreviewClicked"
-               GridPane.columnIndex="2" GridPane.rowIndex="5"/>
-    <Label text="Path to Custom Log:" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
-    <TextField fx:id="inputPathCustom" onMouseClicked="#onCustomClicked" GridPane.columnIndex="2"
-               GridPane.rowIndex="6"/>
-    <Button mnemonicParsing="false" onAction="#onLiveClear" GridPane.columnIndex="3"
-            GridPane.rowIndex="1">
+    <Button mnemonicParsing="false" onAction="#onSave" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+    <Label text="Path to LIVE:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <TextField fx:id="inputPathPtu" onMouseClicked="#onPtuClicked" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+    <Label text="Path to PTU:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <Label text="Path to EPTU:" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <Label text="Path to HOTFIX:" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+    <Label text="Path to TECH-PREVIEW:" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+    <TextField fx:id="inputPathLive" onMouseClicked="#onLiveClicked" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+    <TextField fx:id="inputPathEptu" onMouseClicked="#onEptuClicked" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+    <TextField fx:id="inputPathHotfix" onMouseClicked="#onHotfixClicked" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+    <TextField fx:id="inputPathTechPreview" onMouseClicked="#onTechPreviewClicked" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+    <Label text="Path to Custom Log:" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+    <TextField fx:id="inputPathCustom" onMouseClicked="#onCustomClicked" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+    <Button mnemonicParsing="false" onAction="#onLiveClear" GridPane.columnIndex="3" GridPane.rowIndex="1">
         <GridPane.margin>
-            <Insets left="5.0"/>
+            <Insets left="5.0" />
         </GridPane.margin>
         <graphic>
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                <Image url="@../icons/xbox-x_white.png"/>
+                <Image url="@../icons/xbox-x_white.png" />
             </ImageView>
         </graphic>
     </Button>
-    <Button mnemonicParsing="false" onAction="#onPtuClear" GridPane.columnIndex="3"
-            GridPane.rowIndex="2">
+    <Button mnemonicParsing="false" onAction="#onPtuClear" GridPane.columnIndex="3" GridPane.rowIndex="2">
         <GridPane.margin>
-            <Insets left="5.0"/>
+            <Insets left="5.0" />
         </GridPane.margin>
         <graphic>
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                <Image url="@../icons/xbox-x_white.png"/>
+                <Image url="@../icons/xbox-x_white.png" />
             </ImageView>
         </graphic>
     </Button>
-    <Button mnemonicParsing="false" onAction="#onEptuClear" GridPane.columnIndex="3"
-            GridPane.rowIndex="3">
+    <Button mnemonicParsing="false" onAction="#onEptuClear" GridPane.columnIndex="3" GridPane.rowIndex="3">
         <GridPane.margin>
-            <Insets left="5.0"/>
+            <Insets left="5.0" />
         </GridPane.margin>
         <graphic>
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                <Image url="@../icons/xbox-x_white.png"/>
+                <Image url="@../icons/xbox-x_white.png" />
             </ImageView>
         </graphic>
     </Button>
-    <Button mnemonicParsing="false" onAction="#onHotfixClear" GridPane.columnIndex="3"
-            GridPane.rowIndex="4">
+    <Button mnemonicParsing="false" onAction="#onHotfixClear" GridPane.columnIndex="3" GridPane.rowIndex="4">
         <GridPane.margin>
-            <Insets left="5.0"/>
+            <Insets left="5.0" />
         </GridPane.margin>
         <graphic>
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                <Image url="@../icons/xbox-x_white.png"/>
+                <Image url="@../icons/xbox-x_white.png" />
             </ImageView>
         </graphic>
     </Button>
-    <Button mnemonicParsing="false" onAction="#onTechPreviewClear" GridPane.columnIndex="3"
-            GridPane.rowIndex="5">
+    <Button mnemonicParsing="false" onAction="#onTechPreviewClear" GridPane.columnIndex="3" GridPane.rowIndex="5">
         <GridPane.margin>
-            <Insets left="5.0"/>
+            <Insets left="5.0" />
         </GridPane.margin>
         <graphic>
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                <Image url="@../icons/xbox-x_white.png"/>
+                <Image url="@../icons/xbox-x_white.png" />
             </ImageView>
         </graphic>
     </Button>
-    <Button mnemonicParsing="false" onAction="#onCustomClear" GridPane.columnIndex="3"
-            GridPane.rowIndex="6">
+    <Button mnemonicParsing="false" onAction="#onCustomClear" GridPane.columnIndex="3" GridPane.rowIndex="6">
         <GridPane.margin>
-            <Insets left="5.0"/>
+            <Insets left="5.0" />
         </GridPane.margin>
         <graphic>
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                <Image url="@../icons/xbox-x_white.png"/>
+                <Image url="@../icons/xbox-x_white.png" />
             </ImageView>
         </graphic>
     </Button>
+   <Label text="Write KillEvent to file:" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+   <CheckBox fx:id="cbWriteKillEvent" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="7" />
 </GridPane>
